@@ -99,6 +99,7 @@ t/file-permission.t
 t/filetypes.t
 t/filter.t
 t/firstlinematch-filter.t
+t/forbidden-options.t
 t/highlighting.t
 t/illegal-regex.t
 t/incomplete-last-line.t
