@@ -3,7 +3,8 @@
 use warnings;
 use strict;
 
-use Test::More tests => 10;
+use Test::More tests => 4;
+
 use File::Spec ();
 use File::Temp ();
 
@@ -93,57 +94,6 @@ OUTPUT_DOUBLE_QUOTES: {
     );
 
     ack_sets_match( [ @args, @files ], \@expected, 'Find all the things with --output function' );
-}
-
-my $wd      = getcwd_clean();
-my $tempdir = File::Temp->newdir;
-mkdir File::Spec->catdir($tempdir->dirname, 'subdir');
-
-PROJECT_ACKRC_OUTPUT_FORBIDDEN: {
-    my @files = untaint( File::Spec->rel2abs('t/text/') );
-    my @args = qw/ --env question(\\S+) /;
-
-    chdir $tempdir->dirname;
-    write_file '.ackrc', "--output=foo\n";
-
-    my ( $stdout, $stderr ) = run_ack_with_stderr(@args, @files);
-
-    is_empty_array( $stdout );
-    first_line_like( $stderr, qr/\QOption --output is forbidden in project .ackrc files/ );
-
-    chdir $wd;
-}
-
-HOME_ACKRC_OUTPUT_PERMITTED: {
-    my @files = untaint( File::Spec->rel2abs('t/text/') );
-    my @args = qw/ --env question(\\S+) --sort-files /;
-
-    write_file(File::Spec->catfile($tempdir->dirname, '.ackrc'), "--output=foo\n");
-    chdir File::Spec->catdir($tempdir->dirname, 'subdir');
-    local $ENV{'HOME'} = $tempdir->dirname;
-
-    my ( $stdout, $stderr ) = run_ack_with_stderr(@args, @files);
-
-    is_nonempty_array( $stdout );
-    is_empty_array( $stderr );
-
-    chdir $wd;
-}
-
-ACKRC_ACKRC_OUTPUT_PERMITTED: {
-    my @files = untaint( File::Spec->rel2abs('t/text/') );
-    my @args = qw/ --env question(\\S+) --sort-files /;
-
-    write_file(File::Spec->catfile($tempdir->dirname, '.ackrc'), "--output=foo\n");
-    chdir File::Spec->catdir($tempdir->dirname, 'subdir');
-    local $ENV{'ACKRC'} = File::Spec->catfile($tempdir->dirname, '.ackrc');
-
-    my ( $stdout, $stderr ) = run_ack_with_stderr(@args, @files);
-
-    is_nonempty_array( $stdout );
-    is_empty_array( $stderr );
-
-    chdir $wd;
 }
 
 done_testing();
