@@ -59,6 +59,7 @@ subtest 'without --noenv' => sub {
             name     => File::Spec->canonpath(realpath(File::Spec->catfile($tempdir->dirname, '.ackrc'))),
             contents => [ '--type-add=perl:ext:pl,t,pm' ],
             project  => 1,
+            is_ackrc => 1,
         },
         {
             name     => 'ACK_OPTIONS',
